# prl-mpi-project-1

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  generateNums.sh  make.sh  pms.cpp  pms_1.cpp
